--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ts-node test/LayoutInstance.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/reflect-metadata": "0.0.5",
     "reflect-metadata": "^0.1.9",
+    "ts-node": "^2.0.0",
     "typescript": "^2.1.5"
   }
 }
