--- a/package.json
+++ b/package.json
@@ -2,14 +2,23 @@
   "name": "ug-layout",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/es5/index.js",
+  "typings": "dist/es5/index.d.ts",
   "scripts": {
-    "test": "ts-node test/index.ts"
+    "test": "ts-node test/index.ts",
+    "clean": "rm -rf dist",
+    "prebuild": "npm run clean",
+    "build": "npm run build:es2015 && npm run build:es5",
+    "build:es2015": "tsc -p tsconfig.es2015.json",
+    "build:es5": "babel dist/es2015 --copy-files --ignore .map --out-dir dist/es5 --source-maps"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/reflect-metadata": "0.0.5",
+    "babel-cli": "^6.22.2",
+    "babel-core": "^6.22.1",
+    "babel-preset-es2015": "^6.22.0",
     "reflect-metadata": "^0.1.9",
     "ts-node": "^2.0.0",
     "typescript": "^2.1.5"
