--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "prebuild": "npm run clean",
     "build": "npm run build:es2015 && npm run build:es5",
     "build:es2015": "tsc -p tsconfig.es2015.json",
-    "build:es5": "babel dist/es2015 --copy-files --ignore .map --out-dir dist/es5 --source-maps"
+    "build:es5": "babel dist/es2015 --copy-files --ignore .map --out-dir dist/es5 --source-maps",
+    "start": "webpack-dev-server"
   },
   "author": "",
   "license": "ISC",
@@ -18,10 +19,14 @@
     "@types/reflect-metadata": "0.0.5",
     "babel-cli": "^6.22.2",
     "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
     "reflect-metadata": "^0.1.9",
+    "ts-loader": "^2.0.0",
     "ts-node": "^2.0.0",
-    "typescript": "^2.1.5"
+    "typescript": "^2.1.5",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.2.1"
   },
   "dependencies": {
     "snabbdom": "^0.6.3"
