--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
+    "css-loader": "^0.26.1",
     "reflect-metadata": "^0.1.9",
+    "style-loader": "^0.13.1",
     "ts-loader": "^2.0.0",
     "ts-node": "^2.0.0",
     "typescript": "^2.1.5",
