--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "target": "ES2015",
     "experimentalDecorators": true,
     "sourceMap": true,
+    "strictNullChecks": true,
     "skipLibCheck": true,
     "types": [
       "reflect-metadata"
