--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "rxjs": "^5.1.0",
-    "snabbdom": "^0.6.3"
+    "snabbdom": "^0.6.3",
+    "tslib": "^1.5.0"
   }
 }
