--- a/layout/package.json
+++ b/layout/package.json
@@ -22,6 +22,7 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
     "css-loader": "^0.26.1",
+    "file-loader": "^0.10.0",
     "reflect-metadata": "^0.1.9",
     "style-loader": "^0.13.1",
     "ts-loader": "^2.0.0",
