--- a/layout/package.json
+++ b/layout/package.json
@@ -19,7 +19,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^7.0.5",
     "@types/reflect-metadata": "0.0.5",
+    "@types/sinon": "^1.16.34",
     "ava": "^0.18.2",
     "babel-cli": "^6.22.2",
     "babel-core": "^6.22.1",
@@ -30,6 +32,7 @@
     "file-loader": "^0.10.0",
     "nyc": "^10.1.2",
     "reflect-metadata": "^0.1.9",
+    "sinon": "^1.17.7",
     "style-loader": "^0.13.1",
     "ts-loader": "^2.0.0",
     "ts-node": "^2.1.0",
