--- a/layout/package.json
+++ b/layout/package.json
@@ -26,6 +26,7 @@
     "babel-cli": "^6.22.2",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "chokidar-cli": "^1.2.0",
     "css-loader": "^0.26.1",
@@ -46,7 +47,6 @@
     "tslib": "^1.5.0"
   },
   "ava": {
-    "babel": "inherit",
     "files": [
       "dist/es2015/**/*.spec.js"
     ],
