add doc file for ts interfaces

--- a/layout/package.json
+++ b/layout/package.json
@@ -5,18 +5,20 @@
   "main": "dist/es5/index.js",
   "typings": "dist/es5/index.d.ts",
   "scripts": {
-    "predocs": "npm run build:es2015 && npm run docs:clean",
+    "predocs": "npm run build:docs && npm run docs:clean",
     "docs": "esdoc",
-    "docs:start": "http-server ./docs",
-    "docs:clean": "rm -rf ./docs",
+    "docs:start": "http-server ./generated-docs",
+    "docs:clean": "rm -rf ./generated-docs",
     "pretest": "npm run build:es2015",
     "test": "ava",
     "test:coverage": "nyc ava",
     "test:watch": "chokidar 'src/**/*.ts' -c 'npm test' --initial -d 1000 --silent",
     "prebuild": "npm run build:clean",
     "prebuild:test": "npm run build:clean",
+    "prebuild:docs": "npm run build:clean",
     "build": "npm run build:es2015 && npm run build:es5",
     "build:clean": "rm -rf dist",
+    "build:docs": "tsc -p tsconfig.docs.json",
     "build:test": "tsc -p tsconfig.test.json",
     "build:es2015": "tsc -p tsconfig.es2015.json",
     "build:es5": "babel dist/es2015 --copy-files --ignore .map --out-dir dist/es5 --source-maps",
