--- a/layout/package.json
+++ b/layout/package.json
@@ -48,6 +48,7 @@
     "style-loader": "^0.13.1",
     "ts-loader": "^2.0.0",
     "ts-node": "^2.1.0",
+    "typedoc": "^0.5.7",
     "typescript": "^2.2.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.2.1"
