--- a/angular/package.json
+++ b/angular/package.json
@@ -2,7 +2,8 @@
   "name": "ug-layout-angular",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/es5/index.js",
+  "typings": "dist/es5/index.d.ts",
   "scripts": {
     "test": "ts-node test/index.ts",
     "clean": "rm -rf dist",
@@ -15,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@angular/core": "^2.4.5",
     "@angular/common": "^2.4.5",
     "@angular/compiler": "^2.4.5",
     "@angular/platform-browser": "^2.4.5",
@@ -29,17 +31,21 @@
     "babel-preset-es2015": "^6.22.0",
     "css-loader": "^0.26.1",
     "reflect-metadata": "^0.1.9",
+    "rxjs": "^5.1.1",
     "style-loader": "^0.13.1",
     "ts-loader": "^2.0.0",
     "ts-node": "^2.0.0",
     "typescript": "^2.1.5",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.2.1"
+    "webpack-dev-server": "^2.2.1",
+    "zone.js": "^0.7.7"
   },
-  "dependencies": {
+  "peerDependencies": {
     "@angular/core": "^2.4.5",
     "rxjs": "^5.1.1",
-    "tslib": "^1.5.0",
     "zone.js": "^0.7.7"
+  },
+  "dependencies": {
+    "tslib": "^1.5.0"
   }
 }
