--- a/angular/package.json
+++ b/angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ug-layout-angular",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "main": "dist/es5/index.js",
   "typings": "dist/es5/index.d.ts",
@@ -13,15 +13,16 @@
     "build:es5": "babel dist/es2015 --copy-files --ignore .map --out-dir dist/es5 --source-maps",
     "start": "webpack-dev-server"
   },
-  "author": "",
+  "author": "Steven Sojka",
   "license": "ISC",
   "devDependencies": {
-    "@angular/core": "^2.4.5",
-    "@angular/common": "^2.4.5",
-    "@angular/compiler": "^2.4.5",
-    "@angular/platform-browser": "^2.4.5",
-    "@angular/platform-browser-dynamic": "^2.4.5",
-    "@angular/upgrade": "^2.4.5",
+    "@angular/common": "^4.0.1",
+    "@angular/compiler": "^4.0.1",
+    "@angular/core": "^4.0.1",
+    "@angular/http": "^4.0.1",
+    "@angular/platform-browser": "^4.0.1",
+    "@angular/platform-browser-dynamic": "^4.0.1",
+    "@angular/upgrade": "^4.0.1",
     "@types/angular": "^1.6.3",
     "@types/reflect-metadata": "0.0.5",
     "angular": "^1.6.2",
@@ -41,9 +42,9 @@
     "zone.js": "^0.7.7"
   },
   "peerDependencies": {
-    "@angular/core": "^2.4.5",
-    "rxjs": "^5.1.1",
-    "zone.js": "^0.7.7"
+    "@angular/core": "^4.0.1",
+    "rxjs": "^5.3.0",
+    "zone.js": "^0.8.4"
   },
   "dependencies": {
     "tslib": "^1.5.0"
