--- a/layout/package.json
+++ b/layout/package.json
@@ -60,6 +60,7 @@
     "webpack-dev-server": "^2.2.1"
   },
   "dependencies": {
+    "mindi": "^2.0.2",
     "rxjs": "^5.1.0",
     "snabbdom": "^0.6.3",
     "tslib": "^1.5.0"
