--- a/layout/tsconfig.json
+++ b/layout/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
+    "downlevelIteration": true,
     "skipLibCheck": true,
     "types": [
       "reflect-metadata",
