--- a/angular/package.json
+++ b/angular/package.json
@@ -6,11 +6,11 @@
   "typings": "dist/es5/index.d.ts",
   "scripts": {
     "test": "ts-node test/index.ts",
-    "clean": "rm -rf dist",
+    "clean": "del dist",
     "prebuild": "npm run clean",
     "build": "npm run build:es2015 && npm run build:es5",
     "build:es2015": "tsc -p tsconfig.es2015.json",
-    "build:es5": "babel dist/es2015 --copy-files --ignore .map --out-dir dist/es5 --source-maps",
+    "build:es5": "tsc -p tsconfig.es5.json",
     "start": "webpack-dev-server"
   },
   "author": "Steven Sojka",
@@ -23,7 +23,6 @@
     "@angular/platform-browser": "^4.0.1",
     "@angular/platform-browser-dynamic": "^4.0.1",
     "@angular/upgrade": "^4.0.1",
-    "@types/angular": "^1.6.3",
     "@types/reflect-metadata": "0.0.5",
     "angular": "^1.6.2",
     "babel-cli": "^6.22.2",
@@ -31,12 +30,13 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
     "css-loader": "^0.26.1",
+    "del-cli": "^0.2.1",
     "reflect-metadata": "^0.1.9",
     "rxjs": "^5.1.1",
     "style-loader": "^0.13.1",
     "ts-loader": "^2.0.0",
-    "ts-node": "^2.0.0",
-    "typescript": "^2.2.2",
+    "ts-node": "^2.1.2",
+    "typescript": "^2.3.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.2.1",
     "zone.js": "^0.7.7"
@@ -47,6 +47,6 @@
     "zone.js": "^0.8.4"
   },
   "dependencies": {
-    "tslib": "^1.5.0"
+    "tslib": "^1.6.1"
   }
 }
