--- a/angular/tsconfig.json
+++ b/angular/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
+    "downlevelIteration": true,
     "skipLibCheck": true,
     "types": [
-      "reflect-metadata",
-      "angular"
+      "reflect-metadata"
     ]
   },
   "include": [
