--- a/layout/package.json
+++ b/layout/package.json
@@ -55,10 +55,12 @@
     "webpack-dev-server": "^2.2.1"
   },
   "dependencies": {
-    "mindi": "^2.4.1",
-    "rxjs": "^5.1.0",
+    "mindi": "^2.4.2",
     "snabbdom": "^0.6.3",
-    "tslib": "^1.6.1"
+    "tslib": "^1.6.0"
+  },
+  "peerDependencies": {
+    "rxjs": "^5.0.0",
   },
   "ava": {
     "files": [
