--- a/layout/package.json
+++ b/layout/package.json
@@ -60,7 +60,7 @@
     "tslib": "^1.6.0"
   },
   "peerDependencies": {
-    "rxjs": "^5.0.0",
+    "rxjs": "^5.0.0"
   },
   "ava": {
     "files": [
