refactor(decorators): use rx-decorators for some operations

--- a/layout/package.json
+++ b/layout/package.json
@@ -56,6 +56,7 @@
   },
   "dependencies": {
     "mindi": "^2.6.1",
+    "rx-decorators": "^1.0.2",
     "snabbdom": "^0.6.3",
     "tslib": "^1.6.0"
   },
