--- a/layout/package.json
+++ b/layout/package.json
@@ -45,6 +45,7 @@
     "http-server": "^0.9.0",
     "nyc": "^10.1.2",
     "reflect-metadata": "^0.1.9",
+    "rxjs": "^5.0.0",
     "sinon": "^1.17.7",
     "style-loader": "^0.13.1",
     "ts-loader": "^2.0.0",
