--- a/layout/tsconfig.json
+++ b/layout/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "downlevelIteration": true,
+    "noUnusedLocals": true,
     "skipLibCheck": true,
     "types": [
       "reflect-metadata",
