--- a/layout/tsconfig.es2015.json
+++ b/layout/tsconfig.es2015.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "target": "es2015",
     "outDir": "dist/es2015",
+    "noUnusedLocals": false,
     "declaration": true,
     "declarationDir": "dist/es2015"
   },
