--- a/packages/ug-layout/package.json
+++ b/packages/ug-layout/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ug-layout",
-  "version": "4.0.2",
+  "version": "3.3.0",
   "description": "An extensible and performant layout management framework.",
   "main": "dist/es5/index.js",
   "typings": "dist/es5/index.d.ts",
@@ -64,8 +64,8 @@
     "tslib": "^1.6.0"
   },
   "peerDependencies": {
-    "rxjs": "^5.0.0",
-    "reflect-metadata": "^0.1.9"
+    "reflect-metadata": "^0.1.9",
+    "rxjs": "^5.0.0"
   },
   "ava": {
     "files": [
