--- a/packages/ug-layout-demo/package.json
+++ b/packages/ug-layout-demo/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ug-layout",
-  "version": "4.0.2",
-  "description": "An extensible and performant layout management framework.",
+  "name": "ug-layout-demo",
+  "version": "1.0.0",
+  "description": "",
   "main": "dist/es5/index.js",
   "typings": "dist/es5/index.d.ts",
   "scripts": {
@@ -53,7 +53,7 @@
     "ts-loader": "^2.0.0",
     "ts-node": "^2.1.0",
     "typedoc": "^0.5.7",
-    "typescript": "~2.8.1",
+    "typescript": "~2.3.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.2.1"
   },
@@ -64,8 +64,8 @@
     "tslib": "^1.6.0"
   },
   "peerDependencies": {
-    "reflect-metadata": "^0.1.9",
-    "rxjs": "^5.0.0"
+    "rxjs": "^5.0.0",
+    "reflect-metadata": "^0.1.9"
   },
   "ava": {
     "files": [
@@ -81,3 +81,4 @@
     ]
   }
 }
+
