--- a/packages/ug-layout/.vscode/settings.json
+++ b/packages/ug-layout/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "cSpell.words": [
+    "Configureable",
+    "Constructable",
+    "Deserialized",
+    "Renderable",
+    "deserialize",
+    "serializers"
+  ]
 }
