--- a/packages/ug-layout/package.json
+++ b/packages/ug-layout/package.json
@@ -46,7 +46,7 @@
     "http-server": "^0.9.0",
     "nyc": "^10.1.2",
     "reflect-metadata": "^0.1.9",
-    "rxjs": "^5.0.0",
+    "rxjs": "^6.0.0",
     "sinon": "^1.17.7",
     "standard-version": "^4.2.0",
     "style-loader": "^0.13.1",
@@ -60,12 +60,13 @@
   "dependencies": {
     "mindi": "^2.7.0",
     "rx-decorators": "^1.2.1",
+    "rxjs": "6",
     "snabbdom": "~0.6.3",
     "tslib": "^1.6.0"
   },
   "peerDependencies": {
     "reflect-metadata": "^0.1.9",
-    "rxjs": "^5.0.0"
+    "rxjs": "^6.0.0"
   },
   "ava": {
     "files": [
