--- a/packages/ug-layout/package.json
+++ b/packages/ug-layout/package.json
@@ -46,27 +46,24 @@
     "http-server": "^0.9.0",
     "nyc": "^10.1.2",
     "reflect-metadata": "^0.1.9",
-    "rxjs": "^6.0.0",
+    "rxjs": "^6",
     "sinon": "^1.17.7",
     "standard-version": "^4.2.0",
     "style-loader": "^0.13.1",
     "ts-loader": "^2.0.0",
     "ts-node": "^2.1.0",
     "typedoc": "^0.5.7",
-    "typescript": "~2.8.1",
+    "typescript": "~3",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.2.1"
   },
   "dependencies": {
     "mindi": "^2.7.0",
     "rx-decorators": "^1.2.1",
-    "rxjs": "6",
+    "rxjs": "^6",
     "snabbdom": "~0.6.3",
-    "tslib": "^1.6.0"
-  },
-  "peerDependencies": {
-    "reflect-metadata": "^0.1.9",
-    "rxjs": "^6.0.0"
+    "tslib": "^1.6.0",
+    "reflect-metadata": "^0.1.9"
   },
   "ava": {
     "files": [
