--- a/packages/ug-layout/package.json
+++ b/packages/ug-layout/package.json
@@ -53,17 +53,17 @@
     "ts-loader": "^2.0.0",
     "ts-node": "^2.1.0",
     "typedoc": "^0.5.7",
-    "typescript": "~3",
+    "typescript": "^3.3.3",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.2.1"
   },
   "dependencies": {
     "mindi": "^2.7.0",
+    "reflect-metadata": "^0.1.9",
     "rx-decorators": "^1.2.1",
     "rxjs": "^6",
     "snabbdom": "~0.6.3",
-    "tslib": "^1.6.0",
-    "reflect-metadata": "^0.1.9"
+    "tslib": "^1.6.0"
   },
   "ava": {
     "files": [
