refactor(XYContainer): wip for transparent detached items

--- a/packages/ug-layout/.vscode/settings.json
+++ b/packages/ug-layout/.vscode/settings.json
@@ -6,6 +6,9 @@
     "Deserialized",
     "Renderable",
     "deserialize",
-    "serializers"
+    "injectable",
+    "renderables",
+    "serializers",
+    "unallocated"
   ]
 }
