--- a/packages/ug-layout/.vscode/settings.json
+++ b/packages/ug-layout/.vscode/settings.json
@@ -5,7 +5,10 @@
     "Constructable",
     "Deserialized",
     "Renderable",
+    "b",
+    "cacheable",
     "deserialize",
+    "droppable",
     "injectable",
     "renderables",
     "serializers",
