--- a/packages/ug-layout-angular/package.json
+++ b/packages/ug-layout-angular/package.json
@@ -37,7 +37,7 @@
     "ts-loader": "^2.0.0",
     "ts-node": "^2.1.2",
     "typescript": "~3.3.1",
-    "ug-layout": "^4",
+    "ug-layout": "^4.4.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.2.1",
     "zone.js": "^0.7.7"
@@ -50,6 +50,7 @@
     "zone.js": "^0.8.4"
   },
   "dependencies": {
-    "tslib": "^1.6.0"
+    "tslib": "^1.6.0",
+    "ug-layout": "^4.4.1"
   }
 }
