--- a/packages/ug-layout-angular/package.json
+++ b/packages/ug-layout-angular/package.json
@@ -1,54 +1,52 @@
 {
   "name": "ug-layout-angular",
-  "version": "5.0.0",
-  "description": "",
-  "main": "dist/es5/index.js",
-  "typings": "dist/es5/index.d.ts",
+  "version": "0.0.0",
   "scripts": {
-    "test": "ts-node test/index.ts",
-    "clean": "del dist",
-    "prebuild": "yarn run clean",
-    "build": "yarn run build:es2015 && yarn run build:es5",
-    "build:es2015": "tsc -p tsconfig.es2015.json",
-    "build:es5": "tsc -p tsconfig.es5.json",
-    "start": "webpack-dev-server"
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
-  "author": "Steven Sojka",
-  "license": "ISC",
-  "devDependencies": {
-    "@angular/common": "9.x",
-    "@angular/compiler": "9.x",
-    "@angular/core": "9.x",
-    "@angular/platform-browser": "9.x",
-    "@angular/platform-browser-dynamic": "9.x",
-    "@angular/upgrade": "9.x",
-    "@types/reflect-metadata": "0.0.5",
-    "angular": "^1.6.2",
-    "babel-cli": "^6.22.2",
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.22.0",
-    "css-loader": "^0.26.1",
-    "del-cli": "^0.2.1",
-    "reflect-metadata": "^0.1.9",
-    "rxjs": "^6.0.0",
-    "style-loader": "^0.13.1",
-    "ts-loader": "^2.0.0",
-    "ts-node": "^2.1.2",
-    "typescript": "~3.3.1",
-    "ug-layout": "^4.4.1",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.2.1",
-    "zone.js": "^0.7.7"
-  },
-  "peerDependencies": {
-    "@angular/core": "8.x || 9.x",
-    "@angular/platform-browser": "8.x || 9.x",
-    "rxjs": "^6.0.0",
-    "ug-layout": "^4",
-    "zone.js": "^0.8.4"
-  },
+  "private": true,
   "dependencies": {
-    "tslib": "^1.6.0"
+    "@angular/animations": "~9.0.1",
+    "@angular/common": "~9.0.1",
+    "@angular/compiler": "~9.0.1",
+    "@angular/core": "~9.0.1",
+    "@angular/forms": "~9.0.1",
+    "@angular/platform-browser": "~9.0.1",
+    "@angular/platform-browser-dynamic": "~9.0.1",
+    "@angular/router": "~9.0.1",
+    "rxjs": "~6.5.4",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.900.2",
+    "@angular-devkit/build-ng-packagr": "~0.900.2",
+    "@angular/cli": "~9.0.2",
+    "@angular/compiler-cli": "~9.0.1",
+    "@angular/language-service": "~9.0.1",
+    "@types/jasmine": "~3.5.0",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
+    "@types/reflect-metadata": "^0.1.0",
+    "codelyzer": "^5.1.2",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~4.3.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "ng-packagr": "^9.0.0",
+    "protractor": "~5.4.3",
+    "reflect-metadata": "^0.1.13",
+    "ts-node": "~8.3.0",
+    "tslint": "~5.18.0",
+    "typescript": "~3.7.5",
+    "ug-layout": "^4"
   }
 }
