--- a/packages/ug-layout-angular/tsconfig.json
+++ b/packages/ug-layout-angular/tsconfig.json
@@ -1,14 +1,32 @@
 {
-  "extends": "../../tsconfig.json",
+  "compileOnSave": false,
   "compilerOptions": {
+    "baseUrl": "./",
+    "outDir": "./dist/out-tsc",
+    "sourceMap": true,
+    "declaration": false,
     "downlevelIteration": true,
-    "skipLibCheck": true,
-    "types": [
-      "reflect-metadata"
-    ]
+    "experimentalDecorators": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "importHelpers": true,
+    "target": "es2015",
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "lib": [
+      "es2018",
+      "dom"
+    ],
+    "paths": {
+      "ug-layout-angular": [
+        "dist/ug-layout-angular/ug-layout-angular",
+        "dist/ug-layout-angular"
+      ]
+    }
   },
-  "include": [
-    "src/**/*",
-    "test/**/*"
-  ]
+  "angularCompilerOptions": {
+    "fullTemplateTypeCheck": true,
+    "strictInjectionParameters": true
+  }
 }
